alignment fixes

--- a/style.css
+++ b/style.css
@@ -11,12 +11,17 @@ body{
 .mainBody{
     display: flex;
     justify-content: space-between;
+    align-items: flex-start;
 }
 
 .header{
     display: flex;
     justify-content: space-around;
-    align-items: baseline;
+    align-items: flex-start;
+}
+
+a{
+    margin-top: 20px;
 }
 
 .title{
@@ -70,7 +75,7 @@ body{
 
 .vl {
     border-left: 6px solid white;
-    height: 450px;
+    height: 500px;
     border-radius: 5px;
-    margin-top: 10px;
+    margin-top: 0px;
 }
